This commit will
fix any bugs wrtiting to my boat/athlete/regatta fanouts

--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
@@ -264,7 +264,19 @@
                 }));
             }
 
+
+
+            _resetData() {
+                this._athletes = {};
+                this._oars = {};
+                this._riggers = {};
+                this.athletes = [];
+                this.oars = [];
+                this.riggers = [];
+            }
+
             _handleActionBack(e) {
+                this._resetData();
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFleetDetail.is + '-action-back', {
                     bubbles: true,
                     composed: true
