--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule.html
@@ -67,7 +67,7 @@
                 on-crew-team-manager-schedule-race-list-action-add-race="_handleActionAddedRaces">
             </crew-team-manager-schedule-race-list>
 
-            <crew-team-manager-schedule-picture-create id="picture" team-id="[[teamId]]" on-crew-team-manager-schedule-picture-create-action-cancel="_handleActionCanceled"
+            <crew-team-manager-schedule-picture-create id="picture" regatta="[[_regatta]]" team-id="[[teamId]]" on-crew-team-manager-schedule-picture-create-action-cancel="_handleActionCanceled"
                 on-crew-team-manager-schedule-picture-create-action-created="_handleActionAddedPicture">
             </crew-team-manager-schedule-picture-create>
         </iron-pages>
