--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
@@ -52,8 +52,8 @@
 
             <crew-team-manager-fleet-detail id="detail" boat="[[_boat]]" page="loading" on-crew-team-manager-fleet-detail-action-back="_handleActionBack"
                 on-crew-team-manager-fleet-detail-action-edit="_handleActionEdit" on-crew-team-manager-fleet-detail-action-delete="_handleActionDelete"
-                on-crew-team-manager-fleet-detail-action-add-rigger="_handleActionAddRigger" on-crew-team-manager-fleet-detail-action-add-athlete="_handleActionAddAthlete"
-                on-crew-team-manager-fleet-detail-action-add-oar="_handleActionAddOar" team-id="[[teamId]]" athlete="[[athlete]]">
+                on-crew-team-manager-fleet-detail-action-add-rigger="_handleActionAddRigger" on-crew-team-manager-fleet-detail-action-add-rigger="_handleActionAddAthlete"
+                on-crew-team-manager-fleet-detail-action-add-oar="_handleActionAddOar" team-id="[[teamId]]">
             </crew-team-manager-fleet-detail>
 
             <crew-team-manager-fleet-edit edit="[[_edit]]" id="edit" boat="[[_boat]]" on-crew-team-manager-fleet-edit-action-back="_handleActionBackOnce"
@@ -194,7 +194,6 @@
             }
 
             _handleActionAddedAthletes(e) {
-                this.athlete = e.detail.athletes;
                 this._toast = 'Athletes Added';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
