--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list-results.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-rigger-list-results.html
@@ -30,6 +30,12 @@
                 border-bottom: solid 1px grey;
             }
 
+            .rigger-selected {
+                background-color: #ddd;
+                @apply(--layout-horizontal);
+                border-bottom: solid 1px grey;
+            }
+
             .rigger-avatar {
                 margin: 8px;
             }
@@ -50,9 +56,9 @@
         </style>
 
 
-        <iron-list id="list" items="[[data]]" as="item">
+        <iron-list id="list" items="[[data]]" as="item" selected-items="selectedItems" selection-enabled multi-selection>
             <template>
-                <div class="rigger" on-click="_handleItemClick">
+                <div class$="[[_computedClass(selected)]]" on-click="_handleItemClick">
 
                     <crew-team-manager-avatar class="rigger-avatar" value="[[item.style]]"></crew-team-manager-avatar>
                     <div class="rigger-info">
@@ -82,13 +88,26 @@
                 return {
                     data: {
                         type: Object,
+                    },
+
+                    selectedItems: {
+                        type: Object,
+                        value: {}
                     }
 
                 }
             }
 
+            _computedClass(isSelected) {
+                let classes = 'rigger';
+                if (isSelected) {
+                    classes += '-selected';
+                }
+                return classes;
+            }
 
             _handleItemClick(e) {
+                this.selectedItems = {};
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFleetRiggerListResults.is +
                     '-action-select-riggers', {
                         bubbles: true,
