--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-race-list.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-race-list.html
@@ -83,7 +83,7 @@
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-schedule-race-list-loading id="loading"></crew-team-manager-schedule-race-list-loading>
-                <crew-team-manager-schedule-race-list-results id="results" data="[[_data]]" on-crew-team-manager-schedule-race-list-results-action-select-races="{{selectedRace}}"></crew-team-manager-schedule-race-list-results>
+                <crew-team-manager-schedule-race-list-results id="results" data="[[_data]]" on-crew-team-manager-schedule-race-list-results-action-select-races="_selectRace"></crew-team-manager-schedule-race-list-results>
                 <crew-team-manager-schedule-race-list-message id="message"></crew-team-manager-schedule-race-list-message>
             </iron-pages>
 
@@ -132,7 +132,6 @@
             }
 
             _selectRace(e) {
-
                 for (let x = 0; x < this.selectedRace.length; x++) {
                     if (this.selectedRace[x] == e.detail.athlete) {
                         this.selectedRace.splice(x, x);
@@ -145,25 +144,21 @@
 
             _handleActionAdd() {
                 let path;
-                for (let x = 0; x < this.selectedRace.length; x++) {
-                    path = 'regattaRace/' + this.regatta + '/' + this.selectedRace[x]
-                    console.log(path)
-                    this.$.firebase.saveValue('regattaRace', this.regatta)
-                        .then(() => {
-
+                this.$.firebase.saveValue('regattaRaces', this.regatta)
+                    .then(() => {
+                        for (let x = 0; x < this.selectedRace.length; x++) {
+                            path = 'regattaRaces/' + this.regatta + '/' + this.selectedRace[x];
+                            console.log(path)
                             this.$.firebase.setStoredValue(path, true);
-
-
-                        });
-                }
-                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleRaceList.is +
-                    '-action-add-race', {
-                        bubbles: true,
-                        composed: true,
-                        detail: {
-                            race: this.selectedRace
                         }
-                    }));
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleRaceList.is +
+                            '-action-add-race', {
+                                bubbles: true,
+                                composed: true,
+                            }));
+
+
+                    });
             }
 
             _handleActionBack() {
